// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputGroup gets custom class and id 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group custom-class"
    id="test-id"
  >
    <div
      class="pf-c-text-input-group__main"
    >
      Foo
      <span
        class="pf-c-text-input-group__text"
      >
        <input
          aria-label="Type to filter"
          class="pf-c-text-input-group__text-input"
          type="text"
          value=""
        />
      </span>
    </div>
    <div
      class="pf-c-text-input-group__utilities"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInputGroup renders content 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group"
  >
    <div
      class="pf-c-text-input-group__main"
    >
      Foo
      <span
        class="pf-c-text-input-group__text"
      >
        <input
          aria-label="Type to filter"
          class="pf-c-text-input-group__text-input"
          type="text"
          value=""
        />
      </span>
    </div>
    <div
      class="pf-c-text-input-group__utilities"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInputGroup renders with the proper stying when disabled 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group pf-m-disabled"
  >
    <div
      class="pf-c-text-input-group__main"
    >
      Foo
      <span
        class="pf-c-text-input-group__text"
      >
        <input
          aria-label="Type to filter"
          class="pf-c-text-input-group__text-input"
          disabled=""
          type="text"
          value=""
        />
      </span>
    </div>
    <div
      class="pf-c-text-input-group__utilities"
    />
  </div>
</DocumentFragment>
`;

exports[`TextInputGroupMain input is disabled when TextInputGroupContext isDisabled is true 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group__main"
  >
    <span
      class="pf-c-text-input-group__text"
    >
      <input
        aria-label="Type to filter"
        class="pf-c-text-input-group__text-input"
        disabled=""
        type="text"
        value=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`TextInputGroupMain input is not disabled when TextInputGroupContext isDisabled is false 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group__main"
  >
    <span
      class="pf-c-text-input-group__text"
    >
      <input
        aria-label="Type to filter"
        class="pf-c-text-input-group__text-input"
        type="text"
        value=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`TextInputGroupMain renders content 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group__main"
  >
    Foo
    <span
      class="pf-c-text-input-group__text"
    >
      <input
        aria-label="Type to filter"
        class="pf-c-text-input-group__text-input"
        type="text"
        value=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`TextInputGroupMain renders given input icon props 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group__main pf-m-icon"
  >
    Foo
    <span
      class="pf-c-text-input-group__text"
    >
      <span
        class="pf-c-text-input-group__icon"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          />
        </svg>
      </span>
      <input
        aria-label="Type to filter"
        class="pf-c-text-input-group__text-input"
        type="text"
        value=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`TextInputGroupMain renders the input with custom aria label when given 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group__main"
  >
    Foo
    <span
      class="pf-c-text-input-group__text"
    >
      <input
        aria-label="Foo"
        class="pf-c-text-input-group__text-input"
        type="text"
        value=""
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`TextInputGroupUtilities renders the content 1`] = `
<DocumentFragment>
  <div
    class="pf-c-text-input-group__utilities"
  >
    <button>
      Foo
    </button>
  </div>
</DocumentFragment>
`;
